fix word wrap issue and edit timeformat in diary detail

--- a/src/pages/diary/Content.module.css
+++ b/src/pages/diary/Content.module.css
@@ -1,5 +1,6 @@
 .body {
     @apply font-bold inline;
+    overflow-wrap: anywhere;
 }
 
 .body a{
@@ -17,4 +18,5 @@
 
 .body p {
     display: inline;
+
 }
